--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   },
   "devDependencies": {
     "boganipsum": "^0.1.0",
-    "gulp": "~3.8.5",
+    "del": "^0.1.3",
+    "gulp": "^3.8.10",
     "gulp-autoprefixer": "0.0.8",
-    "gulp-clean": "~0.3.0",
-    "gulp-connect": "~2.0.5",
     "gulp-jade": "~0.5.0",
-    "gulp-stylus": "~1.0.2"
+    "gulp-stylus": "~1.0.2",
+    "gulp-webserver": "^0.8.7"
   },
   "author": "Akiva Levy <akiva@sixthirteen.co> (http://sixthirteen.co/)",
   "license": "MIT",
